tests/ui/typeck/issue-90101.stderr
error[E0277]: the trait `Into<PathBuf>` is not implemented for `Cow<'_, str>`
  --> $DIR/issue-90101.rs:6:10
   |
LL |     func(Path::new("hello").to_path_buf().to_string_lossy(), "world")
   |     ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Into<PathBuf>` is not implemented for `Cow<'_, str>`, which is required by `Cow<'_, str>: Into<PathBuf>`
   |     |
   |     required by a bound introduced by this call
   |
   = note: required for `Cow<'_, str>` to implement `Into<PathBuf>`
note: required by a bound in `func`
  --> $DIR/issue-90101.rs:3:20
   |
LL | fn func(path: impl Into<PathBuf>, code: impl Into<String>) {}
   |                    ^^^^^^^^^^^^^ required by this bound in `func`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
